hubSide/force-app/main/default/objects/Colis__c/Colis__c.object-meta.xml
<CustomObject>
    <label>Colis</label>
    <nameField>
        <label>Colis Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Colis</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>