hubSide/force-app/main/default/objects/Colis__c/fields/BarCode__c.field-meta.xml
<CustomField>
    <fullName>BarCode__c</fullName>
    <formula>IMAGE(&apos;https://barcode.tec-it.com/barcode.ashx?data=&apos; + BarCodeData__c + &apos;&amp;code=Code128&apos;, &apos;colisBarCode&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ColisBarCode</label>
    <type>Text</type>
</CustomField>