hubSide/force-app/main/default/objects/Colis__c/fields/BarCodeData__c.field-meta.xml
<CustomField>
    <fullName>BarCodeData__c</fullName>
    <description>Id to encode for barcode creation.</description>
    <displayFormat>CVR-{00000000}</displayFormat>
    <label>BarCodeData</label>
    <type>AutoNumber</type>
</CustomField>