hubSide/force-app/main/default/objects/Colis__c/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <description>Commentaire sur la non identification possible de l&apos;assuré.</description>
    <label>Commentaire</label>
    <type>TextArea</type>
</CustomField>