hubSide/force-app/main/default/objects/Colis__c/fields/Date_d_expedition__c.field-meta.xml
<CustomField>
    <fullName>Date_d_expedition__c</fullName>
    <label>Date d&apos;expédition</label>
    <type>Date</type>
</CustomField>