hubSide/force-app/main/default/objects/Colis__c/fields/Date_reception__c.field-meta.xml
<CustomField>
    <fullName>Date_reception__c</fullName>
    <label>Date réception</label>
    <type>Date</type>
</CustomField>