hubSide/force-app/main/default/objects/Colis__c/fields/Equipement_sinistre__c.field-meta.xml
<CustomField>
    <fullName>Equipement_sinistre__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Equipement sinistré</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Equipement_sinistre__c.Sinistre__c</field>
            <operation>equals</operation>
            <valueField>$Source.Sinistre__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Equipement_sinistre__c</referenceTo>
    <relationshipLabel>Colis</relationshipLabel>
    <relationshipName>Colis</relationshipName>
    <type>Lookup</type>
</CustomField>