hubSide/force-app/main/default/objects/Colis__c/fields/Nom_expediteur__c.field-meta.xml
<CustomField>
    <fullName>Nom_expediteur__c</fullName>
    <label>Nom expéditeur</label>
    <length>20</length>
    <type>Text</type>
</CustomField>