hubSide/force-app/main/default/objects/Colis__c/fields/Nom_transporteur__c.field-meta.xml
<CustomField>
    <fullName>Nom_transporteur__c</fullName>
    <label>Nom transporteur</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Nom_transporteur</valueSetName>
    </valueSet>
</CustomField>