hubSide/force-app/main/default/objects/Colis__c/fields/Numero_sinistre__c.field-meta.xml
<CustomField>
    <fullName>Numero_sinistre__c</fullName>
    <formula>IF(
    OR(
        ISNULL(Sinistre__c), 
        ISBLANK(Sinistre__c)
    ), 
    &apos;&apos;, 
    Sinistre__r.Numero_sinistre__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Numéro du sinistre</label>
    <type>Text</type>
</CustomField>