hubSide/force-app/main/default/objects/Colis__c/fields/Prenom_expediteur__c.field-meta.xml
<CustomField>
    <fullName>Prenom_expediteur__c</fullName>
    <label>Prénom expéditeur</label>
    <length>25</length>
    <type>Text</type>
</CustomField>