hubSide/force-app/main/default/objects/Colis__c/fields/Reception_colis__c.field-meta.xml
<CustomField>
    <fullName>Reception_colis__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Réception colis</label>
    <referenceTo>Reception_colis__c</referenceTo>
    <relationshipLabel>Colis</relationshipLabel>
    <relationshipName>Colis</relationshipName>
    <type>Lookup</type>
</CustomField>