hubSide/force-app/main/default/objects/Colis__c/fields/Sinistre__c.field-meta.xml
<CustomField>
    <fullName>Sinistre__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sinistre</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Colis</relationshipLabel>
    <relationshipName>Colis</relationshipName>
    <type>Lookup</type>
</CustomField>