hubSide/force-app/main/default/objects/Colis__c/fields/SinistreBarCode__c.field-meta.xml
<CustomField>
    <fullName>SinistreBarCode__c</fullName>
    <formula>IMAGE(&apos;https://barcode.tec-it.com/barcode.ashx?data=&apos; + Numero_sinistre__c + &apos;&amp;code=Code128&apos;, &apos;sinistreBarCode&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Code-barre sinistre</label>
    <type>Text</type>
</CustomField>