hubSide/force-app/main/default/objects/Colis__c/fields/Statut__c.field-meta.xml
<CustomField>
    <fullName>Statut__c</fullName>
    <label>Statut</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Colis_Status</valueSetName>
    </valueSet>
</CustomField>