hubSide/force-app/main/default/objects/Colis__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Réparation SFAMRecycle</fullName>
            </value>
            <value>
                <fullName>Expertise SAV</fullName>
            </value>
            <value>
                <fullName>Réception SFAM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>