hubSide/force-app/main/default/objects/Colis__c/recordTypes/Colis_expedition.recordType-meta.xml
<RecordType>
    <fullName>Colis_expedition</fullName>
    <active>true</active>
    <description>Dédié au colis pour l&apos;expédition</description>
    <label>Colis expédition</label>
</RecordType>