hubSide/force-app/main/default/objects/Colis__c/recordTypes/Colis_reception.recordType-meta.xml
<RecordType>
    <fullName>Colis_reception</fullName>
    <active>true</active>
    <description>Dédié à la réception des colis</description>
    <label>Colis réception</label>
</RecordType>