hubSide/force-app/main/default/objects/Colis__c/validationRules/ChangeOwnerForbidden.validationRule-meta.xml
<ValidationRule>
    <fullName>ChangeOwnerForbidden</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
ISCHANGED(OwnerId),
AND(
 $Profile.Name &lt;&gt; &apos;Administrateur système&apos;,
 ISPICKVAL($User.BusinessProfile__c, &apos;AgentReparationADM&apos;)
))</errorConditionFormula>
    <errorMessage>Vous n&apos;avez pas le droit de changer le propriétaire du colis</errorMessage>
</ValidationRule>