hubSide/force-app/main/default/objects/Colis__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Nom_transporteur__c</columns>
    <columns>Sinistre__c</columns>
    <columns>Equipement_sinistre__c</columns>
    <columns>Date_d_expedition__c</columns>
    <columns>Date_reception__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>