hubSide/force-app/main/default/objects/Colis__c/listViews/Colis_non_affecte.listView-meta.xml
<ListView>
    <fullName>Colis_non_affecte</fullName>
    <columns>NAME</columns>
    <columns>Nom_transporteur__c</columns>
    <columns>Statut__c</columns>
    <columns>Nom_expediteur__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Réparation SFAMRecycle</value>
    </filters>
    <filters>
        <field>Statut__c</field>
        <operation>equals</operation>
        <value>Transféré/Emis,Transféré/Reçu</value>
    </filters>
    <filters>
        <field>Nom_transporteur__c</field>
        <operation>equals</operation>
        <value>ChronopostReparation,LaPosteReparation,BulkParcelsReparation</value>
    </filters>
    <label>Colis non affectés</label>
</ListView>