hubSide/force-app/main/default/objects/Colis__c/listViews/Colis_non_affectes_expertise.listView-meta.xml
<ListView>
    <fullName>Colis_non_affectes_expertise</fullName>
    <columns>NAME</columns>
    <columns>Nom_transporteur__c</columns>
    <columns>Statut__c</columns>
    <columns>Nom_expediteur__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Expertise SAV</value>
    </filters>
    <filters>
        <field>Statut__c</field>
        <operation>equals</operation>
        <value>Transféré/Reçu</value>
    </filters>
    <filters>
        <field>Nom_transporteur__c</field>
        <operation>equals</operation>
        <value>ChronopostSav,LaPosteSav</value>
    </filters>
    <label>Colis issu du SAV</label>
</ListView>