hubSide/force-app/main/default/objects/Colis__c/listViews/Expertise.listView-meta.xml
<ListView>
    <fullName>Expertise</fullName>
    <columns>NAME</columns>
    <columns>Nom_transporteur__c</columns>
    <columns>Sinistre__c</columns>
    <columns>Equipement_sinistre__c</columns>
    <columns>Date_d_expedition__c</columns>
    <columns>Date_reception__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Equipement_sinistre__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>Sinistre__c</field>
        <operation>equals</operation>
    </filters>
    <label>Expertise</label>
</ListView>