hubSide/force-app/main/default/objects/Colis__c/listViews/Mes_colis_a_traiter.listView-meta.xml
<ListView>
    <fullName>Mes_colis_a_traiter</fullName>
    <columns>NAME</columns>
    <columns>Date_reception__c</columns>
    <columns>Sinistre__c</columns>
    <columns>Nom_expediteur__c</columns>
    <columns>Statut__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Statut__c</field>
        <operation>equals</operation>
        <value>Affecté</value>
    </filters>
    <label>Mes colis à traiter</label>
</ListView>