hubSide/force-app/main/default/objects/Colis__c/listViews/PackagesToReturn.listView-meta.xml
<ListView>
    <fullName>PackagesToReturn</fullName>
    <columns>NAME</columns>
    <columns>Nom_transporteur__c</columns>
    <columns>Statut__c</columns>
    <columns>Nom_expediteur__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Statut__c</field>
        <operation>equals</operation>
        <value>Retourner colis</value>
    </filters>
    <label>Colis à retourner</label>
</ListView>